# whisp

./: .gitignore  AGENTS.md  README.md  pyproject.toml
docs/: ARCHITECTURE.md  EXPERIMENTS.md  GGUF.md  ONNX.md  REMOTE_TRAIN.md  TRAIN.md
plans/codec_male_roundtrip/: codec_male_roundtrip_001.md  codec_male_roundtrip_001.py
plans/codec_ordering/: codec_ordering_001.md  codec_ordering_001.py
plans/codec_postprocess/: codec_postprocess_001.md  codec_postprocess_001.py
plans/codec_roundtrip/: codec_roundtrip_001.md  codec_roundtrip_001.py
plans/inspiration/: 2601.15621v1.md
plans/model_config/: model_config_001.md  model_config_001.py
plans/qwen_speaker_conditioning/: qwen_speaker_conditioning_001.md
scripts/: add_phonemes_to_snac_parquet.py  create_filtered_phoneme_snac_dataset.py  create_speaker_refs_from_libh.py  enrich_speaker_refs_with_snac.py  export_onnx.py  extract_qwen_speaker_encoder.py  infer.sh  infer_gguf.py  infer_onnx.py  infer_qwen_speaker_embedding.py  inspect_parquet_text_chars.py  pack_speaker_refs_parquet.py  prepare_jsonl.py  prepare_libritts_r.py  prepare_libritts_r_360.sh  split_filtered_parquet_dataset.py  train_libriheavy_snac.sh  train_scratch.sh
src/: __init__.py  checkpoint.py  codec.py  config.py  data.py  evaluate.py  infer.py  libriheavy.py  model.py  optimizer.py  phonemize.py  prepare.py  qwen_speaker_model.py  snac_ordering.py  tokenization.py  train.py
src/onnx/: __init__.py  export.py  infer.py
